REFACTOR - FloodStationsService + Unit Test